[gd_scene load_steps=50 format=2]

[ext_resource path="res://sprites/scene.png" type="Texture" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://sprites/night.png" type="Texture" id=3]
[ext_resource path="res://sprites/sunrise.png" type="Texture" id=4]
[ext_resource path="res://button_resolver.gd" type="Script" id=5]
[ext_resource path="res://sounds/citySound.mp3" type="AudioStream" id=6]

[sub_resource type="GradientTexture" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.5, 58 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62, 90.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 108.5, 43 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 66, 43.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 157, 25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 41 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 12
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=16]
size = 12
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=18]
size = 12
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=20]
size = 12
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=22]
size = 12
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=24]
size = 12
font_data = SubResource( 23 )

[sub_resource type="DynamicFontData" id=40]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=41]
size = 12
font_data = SubResource( 40 )

[sub_resource type="DynamicFontData" id=38]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=39]
size = 12
font_data = SubResource( 38 )

[sub_resource type="DynamicFontData" id=42]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=43]
size = 12
font_data = SubResource( 42 )

[sub_resource type="DynamicFontData" id=44]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=45]
size = 12
font_data = SubResource( 44 )

[sub_resource type="DynamicFontData" id=26]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=27]
font_data = SubResource( 26 )

[sub_resource type="DynamicFontData" id=28]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=29]
font_data = SubResource( 28 )

[sub_resource type="DynamicFontData" id=30]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=31]
font_data = SubResource( 30 )

[sub_resource type="DynamicFontData" id=34]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=35]
font_data = SubResource( 34 )

[sub_resource type="DynamicFontData" id=36]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=37]
font_data = SubResource( 36 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 965.0, 993.0 ]
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 460, 708.5 )
scale = Vector2( 0.0576172, 115 )
texture = SubResource( 25 )
color = Color( 0.596078, 0.247059, 0.247059, 1 )
energy = 1.13

[node name="DayLight" type="Sprite" parent="."]
visible = false
modulate = Color( 0.996078, 1, 1, 1 )
position = Vector2( 512, 512 )
texture = ExtResource( 1 )

[node name="NightLight" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 512 )
texture = ExtResource( 3 )

[node name="Sunset" type="Sprite" parent="."]
visible = false
position = Vector2( 515, 515 )
texture = ExtResource( 4 )

[node name="Restaurant" type="Area2D" parent="."]
position = Vector2( 459, 708 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restaurant"]
position = Vector2( -0.5, 3 )
shape = SubResource( 1 )

[node name="Hall" type="Area2D" parent="."]
position = Vector2( 594, 726 )

[node name="Area2D" type="CollisionShape2D" parent="Hall"]
position = Vector2( 0, 25.5 )
shape = SubResource( 2 )

[node name="FirstFloor" type="Area2D" parent="."]
position = Vector2( 535, 443 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstFloor"]
position = Vector2( 5.5, -4 )
shape = SubResource( 3 )

[node name="SecondFloor" type="Area2D" parent="."]
position = Vector2( 507, 230 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondFloor"]
position = Vector2( 3, 0.5 )
shape = SubResource( 4 )

[node name="Terrace" type="Area2D" parent="."]
position = Vector2( 541, 81 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrace"]
position = Vector2( -3, -2 )
shape = SubResource( 5 )

[node name="BookStore" type="Area2D" parent="."]
position = Vector2( 1007, 787 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BookStore"]
polygon = PoolVector2Array( -26, -157, 17, -170, 18, 145, -25, 133 )

[node name="Neighbor1" type="Area2D" parent="."]
position = Vector2( 968, 360 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Neighbor1"]
polygon = PoolVector2Array( -10, -14, 7, -24, 9, 14, -10, 25 )

[node name="Neighbor2" type="Area2D" parent="."]
position = Vector2( 739, 657 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Neighbor2"]
position = Vector2( -1, 3 )
shape = SubResource( 8 )

[node name="update" type="Timer" parent="."]
wait_time = 0.005
autostart = true

[node name="Clock" type="Label" parent="."]
margin_left = 76.0
margin_top = 19.0
margin_right = 232.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.945098, 0.121569, 0.121569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 7 )

[node name="CartelRestaurant" type="ColorRect" parent="."]
visible = false
margin_left = 220.0
margin_top = 684.0
margin_right = 369.0
margin_bottom = 766.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textRestaurant" type="Label" parent="CartelRestaurant"]
margin_left = 2.0
margin_top = 2.0
margin_right = 149.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
autowrap = true

[node name="CartelHall" type="ColorRect" parent="."]
visible = false
margin_left = 740.0
margin_top = 739.0
margin_right = 899.0
margin_bottom = 835.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textHall" type="Label" parent="CartelHall"]
margin_left = 4.0
margin_top = 2.0
margin_right = 156.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Hall - Abierto 24hs"
autowrap = true

[node name="Cartel1Piso" type="ColorRect" parent="."]
visible = false
margin_left = 113.0
margin_top = 390.0
margin_right = 300.0
margin_bottom = 498.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text1Piso" type="Label" parent="Cartel1Piso"]
margin_left = 5.0
margin_top = 5.0
margin_right = 181.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Raul - Inquilino 1er Piso
Horarios 8 a 16 hs trabajo"
autowrap = true

[node name="Cartel2Piso" type="ColorRect" parent="."]
visible = false
margin_left = 124.0
margin_top = 165.0
margin_right = 330.0
margin_bottom = 297.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text2Piso" type="Label" parent="Cartel2Piso"]
margin_left = 4.0
margin_top = 3.0
margin_right = 201.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Roberto - Inquilino 2 Piso
Estudiante de Cs. Veterinarias
Cursa por las tardes"
autowrap = true

[node name="CartelTerraza" type="ColorRect" parent="."]
visible = false
margin_left = 747.0
margin_top = 27.0
margin_right = 972.0
margin_bottom = 134.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textTerraza" type="Label" parent="CartelTerraza"]
margin_left = 5.0
margin_top = 4.0
margin_right = 220.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "Terraza - Se utiliza para fiestas"
autowrap = true

[node name="CartelBookstore" type="ColorRect" parent="."]
visible = false
margin_left = 735.0
margin_top = 725.0
margin_right = 901.0
margin_bottom = 823.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textBookstore" type="Label" parent="CartelBookstore"]
margin_left = 4.0
margin_top = 3.0
margin_right = 163.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Bookstore - 8 a 12 y 16 a 20"
autowrap = true

[node name="CartelVecino1" type="ColorRect" parent="."]
visible = false
margin_left = 713.0
margin_top = 312.0
margin_right = 911.0
margin_bottom = 438.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textVecino1" type="Label" parent="CartelVecino1"]
margin_left = 2.0
margin_top = 3.0
margin_right = 194.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
text = "Rosario - Vecina 
Estudiante de Agronomia
"
autowrap = true

[node name="CartelVecino2" type="ColorRect" parent="."]
visible = false
margin_left = 729.0
margin_top = 472.0
margin_right = 914.0
margin_bottom = 615.0
color = Color( 1, 1, 1, 0.803922 )

[node name="textVecino2" type="Label" parent="CartelVecino2"]
margin_left = 5.0
margin_top = 3.0
margin_right = 179.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
text = "Rodrigo - Escritor 
Casi siempre esta solo sale por las noches"
autowrap = true

[node name="Recepcionista" type="ColorRect" parent="."]
visible = false
margin_left = 289.0
margin_top = 838.0
margin_right = 429.0
margin_bottom = 957.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text_recepcionista" type="Label" parent="Recepcionista"]
margin_left = 5.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 41 )
text = "- Todos habian ingresado en sus horarios habituales.
- Subi a la terraza a pedir que se bajara la musica.
- La terraza se alquila para eventos por su buena vista."
autowrap = true

[node name="EscenaCrimen" type="ColorRect" parent="."]
visible = false
margin_left = 129.0
margin_top = 840.0
margin_right = 293.0
margin_bottom = 959.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text_escena" type="Label" parent="EscenaCrimen"]
margin_left = 7.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
text = "- El cuerpo estaba en la cocina. 
- El cuerpo tenia un cuerpo azulado.
- No presentaba signos de violencia.
- Tenia una marca en el tobillo."
autowrap = true

[node name="SegundoPiso" type="ColorRect" parent="."]
visible = false
margin_left = 422.0
margin_top = 838.0
margin_right = 573.0
margin_bottom = 957.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text_2piso" type="Label" parent="SegundoPiso"]
margin_left = 8.0
margin_top = 11.0
margin_right = 166.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 43 )
text = "- Típico departamento de estudiante.
- Tenia mascotas extrañas, arañas, ratas.
- Una pecera grande estaba vacia."
autowrap = true

[node name="Terraza" type="ColorRect" parent="."]
visible = false
margin_left = 559.0
margin_top = 838.0
margin_right = 724.0
margin_bottom = 957.0
color = Color( 1, 1, 1, 0.803922 )

[node name="text_terraza" type="Label" parent="Terraza"]
margin_left = 3.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 45 )
text = "- Habia botellas, cigarrillos y drogas.
- Una nota en el piso decia 1er Piso.
- Varias personas estaban en la fiesta entre ellos el recepcionista."
autowrap = true

[node name="button_resolver" type="Button" parent="."]
margin_left = 718.0
margin_top = 966.0
margin_right = 877.0
margin_bottom = 991.0
custom_fonts/font = SubResource( 27 )
text = "Resolver"
script = ExtResource( 5 )

[node name="button_escenaCrimen" type="Button" parent="."]
margin_left = 150.0
margin_top = 965.0
margin_right = 275.0
margin_bottom = 994.0
custom_fonts/font = SubResource( 29 )
text = "Escena del crimen"

[node name="button_hall" type="Button" parent="."]
margin_left = 291.0
margin_top = 964.0
margin_right = 419.0
margin_bottom = 993.0
custom_fonts/font = SubResource( 31 )
text = "Hall"

[node name="button_terraza" type="Button" parent="."]
margin_left = 575.0
margin_top = 965.0
margin_right = 703.0
margin_bottom = 993.0
custom_fonts/font = SubResource( 35 )
text = "Terraza"

[node name="button_2Piso" type="Button" parent="."]
margin_left = 434.0
margin_top = 965.0
margin_right = 562.0
margin_bottom = 993.0
custom_fonts/font = SubResource( 37 )
text = "2do Piso"

[node name="SonidoCiudad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="input_event" from="Restaurant" to="." method="_on_Restaurant_input_event"]
[connection signal="mouse_entered" from="Restaurant" to="." method="_on_Restaurant_mouse_entered"]
[connection signal="mouse_exited" from="Restaurant" to="." method="_on_Restaurant_mouse_exited"]
[connection signal="mouse_entered" from="Hall" to="." method="_on_Hall_mouse_entered"]
[connection signal="mouse_exited" from="Hall" to="." method="_on_Hall_mouse_exited"]
[connection signal="mouse_entered" from="FirstFloor" to="." method="_on_FirstFloor_mouse_entered"]
[connection signal="mouse_exited" from="FirstFloor" to="." method="_on_FirstFloor_mouse_exited"]
[connection signal="mouse_entered" from="SecondFloor" to="." method="_on_SecondFloor_mouse_entered"]
[connection signal="mouse_exited" from="SecondFloor" to="." method="_on_SecondFloor_mouse_exited"]
[connection signal="mouse_entered" from="Terrace" to="." method="_on_Terrace_mouse_entered"]
[connection signal="mouse_exited" from="Terrace" to="." method="_on_Terrace_mouse_exited"]
[connection signal="mouse_entered" from="BookStore" to="." method="_on_BookStore_mouse_entered"]
[connection signal="mouse_exited" from="BookStore" to="." method="_on_BookStore_mouse_exited"]
[connection signal="mouse_entered" from="Neighbor1" to="." method="_on_Neighbor1_mouse_entered"]
[connection signal="mouse_exited" from="Neighbor1" to="." method="_on_Neighbor1_mouse_exited"]
[connection signal="mouse_entered" from="Neighbor2" to="." method="_on_Neighbor2_mouse_entered"]
[connection signal="mouse_exited" from="Neighbor2" to="." method="_on_Neighbor2_mouse_exited"]
[connection signal="timeout" from="update" to="." method="_on_update_timeout"]
[connection signal="mouse_entered" from="button_escenaCrimen" to="." method="_on_button_escenaCrimen_mouse_entered"]
[connection signal="mouse_exited" from="button_escenaCrimen" to="." method="_on_button_escenaCrimen_mouse_exited"]
[connection signal="mouse_entered" from="button_hall" to="." method="_on_button_hall_mouse_entered"]
[connection signal="mouse_exited" from="button_hall" to="." method="_on_button_hall_mouse_exited"]
[connection signal="mouse_entered" from="button_terraza" to="." method="_on_button_terraza_mouse_entered"]
[connection signal="mouse_exited" from="button_terraza" to="." method="_on_button_terraza_mouse_exited"]
[connection signal="mouse_entered" from="button_2Piso" to="." method="_on_button_2Piso_mouse_entered"]
[connection signal="mouse_exited" from="button_2Piso" to="." method="_on_button_2Piso_mouse_exited"]
